# learnopengl

./: .gitignore  CMakeLists.txt  Makefile  README.md  snippets.txt  steps.txt
include/glad/: glad.h
shaders/: vertex.glsl
src/: glad.c  main.cpp  shader.cpp  shader.h  shader.hpp  test.cpp  test.hpp
wins/: ebos_rectangle.txt  first.txt  hello_triangle_ex_1.txt  hello_triangle_ex_2.txt  hello_triangle_ex_3.txt  triangle.txt
